tests/errors/show_errors1.f90
subroutine sub()
end subroutine

program show_errors1
implicit none

integer :: x

y = 
x = (2+3)*5
call sub()
print *, xx
print *, xz
print *, fasldjkfh

end program
